--- a/public/GioiThieu.pug
+++ b/public/GioiThieu.pug
@@ -8,7 +8,7 @@ html(style='font-size: 16px;' lang='en')
     title Các hoạt động
     link(rel='stylesheet' href='public/source/css/nicepage.css' media='screen')
     link(rel='stylesheet' href='public/source/css/GioiThieu.css' media='screen')
-    link(rel='icon' href='/public/source/images/Logo.png')
+    link(rel='icon' href='/public/source/public/source/images/Logo.png')
     script.u-script(type='text/javascript' src='public/source/js/jquery.js' defer='')
     script.u-script(type='text/javascript' src='public/source/js/nicepage.js' defer='')
     link#u-theme-google-font(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i')
@@ -18,7 +18,7 @@ html(style='font-size: 16px;' lang='en')
       "@context": "http://schema.org",
       "@type": "Organization",
       "name": "",
-      "logo": "public/source/images/Logo.png"
+      "logo": "public/source/public/source/images/Logo.png"
       }
     meta(name='theme-color' content='#2799b1')
     meta(property='og:title' content='Các hoạt động')
@@ -44,6 +44,7 @@ html(style='font-size: 16px;' lang='en')
           span.u-text-custom-color-1
             span.u-text-palette-1-base bản thân 
           span.u-text-custom-color-1 thời Đại học?
+
         .u-clearfix.u-expanded-width.u-gutter-30.u-layout-wrap.u-layout-wrap-1
           .u-gutter-0.u-layout
             .u-layout-col
@@ -138,26 +139,34 @@ html(style='font-size: 16px;' lang='en')
                               path(d='M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744\
                               L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284\
                               c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z')
-                  .u-align-center.u-container-style.u-layout-cell.u-shape-rectangle.u-size-18.u-white.u-layout-cell-2
+                  .u-container-style.u-layout-cell.u-shape-rectangle.u-size-18.u-white.u-layout-cell-2
                     .u-container-layout.u-container-layout-2
                       span.u-file-icon.u-icon.u-icon-circle.u-palette-1-base.u-icon-1
                         img(src='public/source/images/4696727.png' alt='')
-                      h5.u-custom-font.u-font-roboto.u-text.u-text-2
+                      h5.u-align-center.u-custom-font.u-font-roboto.u-text.u-text-2
                         | HOẠT ĐỘNG
                         br
                         | TRAINING
-                      p.u-text.u-text-palette-5-dark-2.u-text-3 Mô tả nội dung
+                      p.u-align-justify.u-text.u-text-palette-5-dark-2.u-text-3
+                        | - Ôn tập lại tổng quan kiến thức, thi thử các môn học
+                        br
+                        | - Tham gia các hoạt động học thuật
+                        br
+                        | - ...
               .u-size-30
                 .u-layout-row
-                  .u-align-center.u-container-style.u-layout-cell.u-shape-rectangle.u-size-18.u-white.u-layout-cell-3
+                  .u-container-style.u-layout-cell.u-shape-rectangle.u-size-18.u-white.u-layout-cell-3
                     .u-container-layout.u-container-layout-3
                       span.u-file-icon.u-icon.u-icon-circle.u-palette-3-base.u-icon-2
                         img(src='public/source/images/2967475.png' alt='')
-                      h5.u-custom-font.u-font-roboto.u-text.u-text-4
+                      h5.u-align-center.u-custom-font.u-font-roboto.u-text.u-text-4
                         | HOẠT ĐỘNG
                         br
                         | TRUYỀN THÔNG
-                      p.u-text.u-text-palette-5-dark-2.u-text-5 Mô tả nội dung
+                      p.u-align-justify.u-text.u-text-palette-5-dark-2.u-text-5
+                        | - Mang hình ảnh Ban Học Tập đến rộng rãi với mọi người.
+                        br
+                        | - Tổ chức các hoạt động cực "hot".
                   .u-container-style.u-hidden-sm.u-hidden-xs.u-layout-cell.u-size-42.u-layout-cell-4
                     .u-container-layout.u-valign-top.u-container-layout-4
                       #carousel-e7a9.u-carousel.u-gallery.u-hidden-xs.u-layout-carousel.u-lightbox.u-no-transition.u-show-text-none.u-gallery-2(data-interval='5000' data-u-ride='carousel')
@@ -166,6 +175,10 @@ html(style='font-size: 16px;' lang='en')
                           li.u-grey-70.u-shape-circle(data-u-target='#carousel-e7a9' data-u-slide-to='1' style='width: 10px; height: 10px;')
                           li.u-grey-70.u-shape-circle(data-u-target='#carousel-e7a9' data-u-slide-to='2' style='width: 10px; height: 10px;')
                           li.u-grey-70.u-shape-circle(data-u-target='#carousel-e7a9' data-u-slide-to='3' style='width: 10px; height: 10px;')
+                          li.u-grey-70.u-shape-circle(data-u-target='#carousel-e7a9' data-u-slide-to='4' style='width: 10px; height: 10px;')
+                          li.u-grey-70.u-shape-circle(data-u-target='#carousel-e7a9' data-u-slide-to='5' style='width: 10px; height: 10px;')
+                          li.u-grey-70.u-shape-circle(data-u-target='#carousel-e7a9' data-u-slide-to='6' style='width: 10px; height: 10px;')
+                          li.u-grey-70.u-shape-circle(data-u-target='#carousel-e7a9' data-u-slide-to='7' style='width: 10px; height: 10px;')
                         .u-carousel-inner.u-gallery-inner(role='listbox')
                           .u-active.u-carousel-item.u-gallery-item.u-carousel-item-7
                             .u-back-slide(data-image-width='1452' data-image-height='355')
@@ -201,6 +214,50 @@ html(style='font-size: 16px;' lang='en')
                             style(data-mode='MD').
                             style(data-mode='SM').
                             style(data-mode='XS').
+                          .u-carousel-item.u-gallery-item.u-carousel-item-11(data-image-width='1280' data-image-height='853')
+                            .u-back-slide
+                              img.u-back-image.u-expanded(src='public/source/images/NgoiKha-BuLong03.jpg')
+                            .u-over-slide.u-over-slide-11
+                              h3.u-gallery-heading
+                              p.u-gallery-text
+                            style(data-mode='XL').
+                            style(data-mode='LG').
+                            style(data-mode='MD').
+                            style(data-mode='SM').
+                            style(data-mode='XS').
+                          .u-carousel-item.u-gallery-item.u-carousel-item-12(data-image-width='1920' data-image-height='1000')
+                            .u-back-slide
+                              img.u-back-image.u-expanded(src='public/source/images/CucThi-ROM.jpg')
+                            .u-over-slide.u-over-slide-12
+                              h3.u-gallery-heading
+                              p.u-gallery-text
+                            style(data-mode='XL').
+                            style(data-mode='LG').
+                            style(data-mode='MD').
+                            style(data-mode='SM').
+                            style(data-mode='XS').
+                          .u-carousel-item.u-gallery-item.u-carousel-item-13(data-image-width='998' data-image-height='1080')
+                            .u-back-slide
+                              img.u-back-image.u-expanded(src='public/source/images/CucThi-ThitKLinhVt.jpg')
+                            .u-over-slide.u-over-slide-13
+                              h3.u-gallery-heading
+                              p.u-gallery-text
+                            style(data-mode='XL').
+                            style(data-mode='LG').
+                            style(data-mode='MD').
+                            style(data-mode='SM').
+                            style(data-mode='XS').
+                          .u-carousel-item.u-gallery-item.u-carousel-item-14(data-image-width='1513' data-image-height='1080')
+                            .u-back-slide
+                              img.u-back-image.u-expanded(src='public/source/images/CucThi-nSVnhK.jpg')
+                            .u-over-slide.u-over-slide-14
+                              h3.u-gallery-heading
+                              p.u-gallery-text
+                            style(data-mode='XL').
+                            style(data-mode='LG').
+                            style(data-mode='MD').
+                            style(data-mode='SM').
+                            style(data-mode='XS').
                         a.u-absolute-vcenter.u-carousel-control.u-carousel-control-prev.u-grey-70.u-icon-circle.u-opacity.u-opacity-70.u-spacing-10.u-text-white.u-carousel-control-3(href='#carousel-e7a9' role='button' data-u-slide='prev')
                           span(aria-hidden='true')
                             svg(viewBox='0 0 451.847 451.847')
@@ -225,7 +282,13 @@ html(style='font-size: 16px;' lang='en')
                               c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z')
     section#carousel_1385.u-align-center.u-clearfix.u-section-2
       .u-clearfix.u-sheet.u-sheet-1
-        h3.u-custom-font.u-font-montserrat.u-text.u-text-palette-1-base.u-text-1 Chúng tôi cần bạn...
+        h3.u-custom-font.u-font-montserrat.u-text.u-text-palette-1-base.u-text-1
+          | Chúng tôi cần bạn...
+          br
+          | (đừng lo nếu không có 
+          br
+          span.u-text-custom-color-1 kinh nghiệm
+          |  nhé!)
     section#carousel_5e58.u-clearfix.u-palette-5-light-2.u-section-3
       .u-expanded-width.u-shape.u-shape-rectangle.u-white.u-shape-1
       .u-clearfix.u-gutter-26.u-layout-wrap.u-layout-wrap-1
@@ -235,7 +298,7 @@ html(style='font-size: 16px;' lang='en')
               .u-layout-col
                 .u-container-style.u-hidden-sm.u-hidden-xs.u-layout-cell.u-size-20.u-layout-cell-1
                   .u-container-layout.u-container-layout-1
-                .u-align-center.u-container-style.u-layout-cell.u-palette-1-base.u-size-40.u-layout-cell-2
+                .u-container-style.u-layout-cell.u-palette-1-base.u-size-40.u-layout-cell-2
                   .u-container-layout.u-valign-top.u-container-layout-2
                     span.u-icon.u-icon-circle.u-text-palette-1-base.u-white.u-icon-1(data-animation-name='' data-animation-duration='0' data-animation-delay='0' data-animation-direction='')
                       svg.u-svg-link(preserveAspectRatio='xMidYMin slice' viewBox='0 0 54 54' style='')
@@ -260,31 +323,64 @@ html(style='font-size: 16px;' lang='en')
                           c-0.391-0.391-1.023-0.391-1.414,0s-0.391,1.023,0,1.414L12.15,11.564z')
                           path(d='M27,13c-6.617,0-12,5.383-12,12c0,0.553,0.447,1,1,1s1-0.447,1-1c0-5.514,4.486-10,10-10c0.553,0,1-0.447,1-1\
                           S27.553,13,27,13z')
-                    h5.u-custom-font.u-font-lato.u-text.u-text-1 Truyền thông
-                    p.u-text.u-text-2 Mô tả công việc
-                    a.u-active-none.u-align-center.u-border-1.u-border-active-palette-1-light-2.u-border-hover-palette-1-light-2.u-border-white.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-alt-color.u-btn-1(href='/DangKy/TruyenThong/' data-animation-name='' data-animation-duration='0' data-animation-delay='0' data-animation-direction='') TÌM HIỂU NGAY
+                    h5.u-align-center.u-custom-font.u-font-roboto.u-text.u-text-1 Truyền thông
+                    p.u-align-justify.u-text.u-text-2
+                      | Tại đây, bạn sẽ có cơ hội:
+                      br
+                      | - Triển khai các kế hoạch truyền thông do Ban học tập tổ chức.
+                      br
+                      | - Tham gia vào việc viết nội dung cho Fanpage, Youtube,...
+                      br
+                      | - Chụp ảnh / quay phim / hậu kỳ hình ảnh của các buổi training, các hoạt động,...
+                      br
+                      | - Tham gia trong việc lên kế hoạch cho các hoạt động, sự kiện của Ban.
+                      br
+                      | - Thiết kế các poster, banner,...hỗ trợ cho các hoạt động truyền thông.
+                    a.u-active-none.u-align-center.u-border-1.u-border-active-palette-1-light-2.u-border-hover-palette-1-light-2.u-border-white.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-alt-color.u-btn-1(href='/DangKy/TruyenThong/' data-animation-name='' data-animation-duration='0' data-animation-delay='0' data-animation-direction='') ỨNG TUYỂN NGAY
             .u-size-20.u-size-30-md
               .u-layout-col
-                .u-align-center.u-container-style.u-layout-cell.u-size-40.u-white.u-layout-cell-3
+                .u-container-style.u-layout-cell.u-size-40.u-white.u-layout-cell-3
                   .u-container-layout.u-valign-top.u-container-layout-3
                     span.u-file-icon.u-icon.u-icon-circle.u-palette-1-base.u-text-white.u-icon-2
                       img(src='public/source/images/2083199-32dc92f1.png' alt='')
-                    h5.u-custom-font.u-font-montserrat.u-text.u-text-palette-1-base.u-text-3 TRAINING
-                    p.u-text.u-text-palette-5-dark-2.u-text-4 Mô tả công việc
-                    a.u-active-none.u-align-center.u-border-1.u-border-active-grey-60.u-border-black.u-border-hover-grey-60.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-color.u-btn-2(href='/DangKy/Training/')  TÌM HIỂU NGAY
+                    h5.u-align-center.u-custom-font.u-font-roboto.u-text.u-text-palette-1-base.u-text-3 TRAINING
+                    p.u-align-justify.u-text.u-text-palette-5-dark-2.u-text-4
+                      | Tại đây, bạn sẽ có cơ hội:
+                      br
+                      | - Được trực tiếp đứng trên giảng đường và cùng chia sẽ kiến thức với tất cả mọi người.
+                      br
+                      | - Được ôn tập lại nội dung môn học.
+                      br
+                      | - Rèn luyện kĩ năng thuyết trình, giải quyết vấn đề ngại trước đám đông,...
+                      br
+                      | - Tổ chức các hoạt động học thuật, mang tri thức đến với nhiều người.
+                      br
+                      | **Training: Hoạt động ôn tập lại nội dung môn học.
+                    a.u-active-none.u-align-center.u-border-1.u-border-active-grey-60.u-border-black.u-border-hover-grey-60.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-color.u-btn-2(href='/DangKy/Training/')  ỨNG TUYỂN NGAY
                 .u-container-style.u-hidden-sm.u-hidden-xs.u-layout-cell.u-size-20.u-layout-cell-4
                   .u-container-layout.u-container-layout-4
             .u-size-20.u-size-60-md
               .u-layout-col
                 .u-container-style.u-hidden-md.u-hidden-sm.u-hidden-xs.u-layout-cell.u-size-20.u-layout-cell-5
                   .u-container-layout.u-container-layout-5
-                .u-align-center.u-container-style.u-layout-cell.u-palette-1-base.u-size-40.u-layout-cell-6
+                .u-container-style.u-layout-cell.u-palette-1-base.u-size-40.u-layout-cell-6
                   .u-container-layout.u-valign-bottom-sm.u-valign-bottom-xs.u-valign-top-lg.u-valign-top-md.u-valign-top-xl.u-container-layout-6
                     span.u-file-icon.u-icon.u-icon-circle.u-text-palette-1-base.u-white.u-icon-3
                       img(src='public/source/images/5037189-8708eb5f.png' alt='')
-                    h5.u-custom-font.u-font-montserrat.u-text.u-text-5 KHÁC
-                    p.u-text.u-text-6 Mô tả công việc
-                    a.u-active-none.u-align-center.u-border-1.u-border-active-palette-1-light-2.u-border-hover-palette-1-light-2.u-border-white.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-alt-color.u-btn-3(href='/DangKy/Khac/')  TÌM HIỂU NGAY
+                    h5.u-align-center.u-custom-font.u-font-roboto.u-text.u-text-5 KHÁC
+                    p.u-align-justify.u-text.u-text-6
+                      | Nếu bạn chưa xác định được mình thích gì?
+                      br
+                      | Tại đây, bạn sẽ có cơ hội:
+                      br
+                      | - Trải nghiệm các hoạt động ở vị trí Training / Truyền thông.
+                      br
+                      | - Được hỗ trợ các hoạt động ở cả 2 vị trí nếu bạn muốn.
+                      br
+                      | - Được hỗ trợ để giúp bạn xác định vị trí phù hợp với mình nhất.
+                      br
+                      | - ...
+                    a.u-active-none.u-align-center.u-border-1.u-border-active-palette-1-light-2.u-border-hover-palette-1-light-2.u-border-white.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-alt-color.u-btn-3(href='/DangKy/Khac/') ỨNG TUYỂN NGAY
     style.u-overlap-style.
       .u-overlap:not(.u-sticky-scroll) .u-header {
       background-color: #2799b1 !important
