--- a/public/GioiThieu.pug
+++ b/public/GioiThieu.pug
@@ -17,9 +17,36 @@ html(style='font-size: 16px;' lang='en')
       {
       "@context": "http://schema.org",
       "@type": "Organization",
-      "name": "",
-      "logo": "public/source/public/source/images/Logo.png"
+      "name": "Ban Học Tập Khoa Học Và Kỹ Thuật Thông Tin",
+      "logo": "/public/source/images/Logo.png"
       }
+    // Messenger Plugin chat Code
+    #fb-root
+    // Your Plugin chat code
+    #fb-customer-chat.fb-customerchat
+    script.
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "123796654757372");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    // Your SDK code
+    script.
+      window.fbAsyncInit = function() {
+      FB.init({
+      xfbml            : true,
+      version          : 'v15.0'
+      });
+      };
+      (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+
+    meta(name='theme-color' content='#2799b1')
+    meta(property='og:title' content='Page 1')
+    meta(property='og:type' content='website')
     meta(name='theme-color' content='#2799b1')
     meta(property='og:title' content='Các hoạt động')
     meta(property='og:type' content='website')
