Thêm rút gọn link

--- a/public/countdown.pug
+++ b/public/countdown.pug
@@ -60,17 +60,17 @@ html(style='font-size: 16px;' lang='en')
           br
           span.u-text-white(style="color: #2799b1 !important") Khoa Học và Kỹ thuật Thông tin
     section#carousel_a9f5.u-clearfix.u-image.u-valign-middle-md.u-valign-middle-sm.u-valign-middle-xs.u-section-1(data-image-width='1536' data-image-height='1080')
-      .u-clearfix.u-sheet.u-valign-middle.u-sheet-1
-        .u-clearfix.u-expanded-width-xs.u-layout-wrap.u-layout-wrap-1(style="margin-top: 0px; margin-bottom: 0px")
+      .u-clearfix.u-sheet.u-sheet-1
+        .u-clearfix.u-expanded-width-xs.u-layout-wrap.u-layout-wrap-1
           .u-layout
             .u-layout-row
               .u-align-center.u-container-style.u-layout-cell.u-right-cell.u-shape-rectangle.u-size-33-lg.u-size-33-xl.u-size-60-md.u-size-60-sm.u-size-60-xs.u-layout-cell-1
                 .u-container-layout.u-valign-top-xs.u-container-layout-1
                   img.u-expanded-width.u-image.u-image-contain.u-image-1(src='public/source/images/ffgg-min.png' data-image-width='1099' data-image-height='1099')
               .u-container-style.u-layout-cell.u-left-cell.u-shape-rectangle.u-size-27-lg.u-size-27-xl.u-size-60-md.u-size-60-sm.u-size-60-xs.u-layout-cell-2
-                .u-container-layout.u-valign-middle.u-container-layout-2
+                .u-container-layout.u-valign-middle-lg.u-valign-middle-md.u-valign-middle-sm.u-valign-middle-xl.u-container-layout-2
                   h2.u-align-center.u-custom-font.u-font-roboto.u-text.u-text-palette-1-base.u-text-1 Đếm ngược nào...
-                  .u-countdown.u-countdown-1(data-timer-id='93d1' data-type='to-date' data-target-date=dateCountdown data-for='everyone' data-direction='down' data-time-left='5255m' data-target-number='100' data-start-time=dateNow data-frequency='1s' data-after-count='redirect' data-redirect-url='https://banhoctap.dev')
+                  .u-countdown.u-countdown-1(data-timer-id='93d1' data-type='to-date' data-target-date=dateCountdown data-for='everyone' data-direction='down' data-time-left='5255m' data-target-number='100' data-start-time=dateNow data-frequency='1s' data-after-count='redirect' data-redirect-url='https://')
                     .u-countdown-wrapper.u-spacing-20
                       .u-countdown-item.u-countdown-years.u-hidden.u-spacing-10
                         .u-countdown-counter.u-countdown-counter-1
