--- a/public/source/css/countdown.css
+++ b/public/source/css/countdown.css
@@ -4,12 +4,12 @@
   }
   
   .u-section-1 .u-sheet-1 {
-    min-height: 600px;
+    min-height: 815px;
   }
   
   .u-section-1 .u-layout-wrap-1 {
     width: 1140px;
-    margin: 60px auto;
+    margin: 0 0 60px;
   }
   
   .u-section-1 .u-layout-cell-1 {
@@ -38,6 +38,8 @@
     letter-spacing: 2px;
     font-size: 3rem;
     line-height: 1;
+    font-weight: 700;
+    font-family: Roboto, sans-serif;
     margin: 0;
   }
   
@@ -150,6 +152,7 @@
   .u-section-1 .u-text-2 {
     background-image: none;
     font-size: 1.375rem;
+    font-weight: 400;
     margin: 40px 0 0;
   }
   
@@ -186,14 +189,11 @@
     }
   
     .u-section-1 .u-text-1 {
-      font-weight: 700;
-      font-family: Roboto, sans-serif;
       font-size: 2.25rem;
     }
   
     .u-section-1 .u-text-2 {
       font-size: 1.25rem;
-      font-weight: 400;
     }
   }
   
@@ -269,8 +269,6 @@
     }
   
     .u-section-1 .u-layout-wrap-1 {
-      margin-top: 30px;
-      margin-bottom: 30px;
       margin-right: initial;
       margin-left: initial;
       width: auto;
@@ -292,9 +290,17 @@
       min-height: 532px;
     }
   
+    .u-section-1 .u-container-layout-2 {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  
     .u-section-1 .u-text-1 {
       font-size: 1.875rem;
       width: auto;
+      margin-top: 11px;
+      margin-left: 10px;
+      margin-right: 10px;
     }
   
     .u-section-1 .u-countdown-counter-1 {
@@ -343,10 +349,13 @@
   
     .u-section-1 .u-text-2 {
       width: auto;
+      margin-left: 10px;
+      margin-right: 10px;
     }
   
     .u-section-1 .u-btn-1 {
-      margin-top: 31px;
+      margin-top: 29px;
+      margin-right: -4px;
       padding: 16px 48px 17px;
     }
   }
