--- a/public/RutGonLink.pug
+++ b/public/RutGonLink.pug
@@ -80,4 +80,4 @@ html(style='font-size: 16px;' lang='en')
               label.u-custom-font.u-font-roboto.u-label(for='name-78a3') Ghi chú
               input#name-78a3.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(type='text' placeholder='Nhập vào ghi chú' name='GhiChu')
             .u-align-left.u-form-group.u-form-submit
-              a.u-btn.u-btn-submit.u-button-style(onclick='SubmitRutGonLink()') Xác nhận
+              a.u-btn.u-btn-submit.u-button-style(onclick='SubmitRutGonLink()') Gửi yêu cầu
