--- a/public/user/RutGonLink.pug
+++ b/public/user/RutGonLink.pug
@@ -74,8 +74,8 @@ html(style='font-size: 16px;' lang='en')
               label.u-custom-font.u-font-roboto.u-label(for='name-78a3') URL gốc
               input#name-78a3.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(type='text' placeholder='Nhập vào địa chỉ gốc cần được rút gọn' name='LongURL' required='')
             .u-form-group.u-form-group-2
-              label.u-custom-font.u-font-roboto.u-label(for='text-a7bf') URL rút gọn (dạng banhoctap.dev/...)
-              input#text-a7bf.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(type='text' name='ShortURL' placeholder='Nhập vào địa chỉ muốn rút gọn' value='https://banhoctap.dev/' required='')
+              label.u-custom-font.u-font-roboto.u-label(for='text-a7bf') URL rút gọn (dạng link.banhoctap.dev/...)
+              input#text-a7bf.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(type='text' name='ShortURL' placeholder='Nhập vào địa chỉ muốn rút gọn' value='https://link.banhoctap.dev/' required='')
             .u-form-group.u-form-name
               label.u-custom-font.u-font-roboto.u-label(for='name-78a3') Ghi chú
               input#name-78a3.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(type='text' placeholder='Nhập vào ghi chú' name='GhiChu')
