--- a/public/XetTuyen.pug
+++ b/public/XetTuyen.pug
@@ -103,6 +103,13 @@ html(style='font-size: 16px;' lang='en')
                       .u-form-email.u-form-group.u-label-none
                         label.u-custom-font.u-font-roboto.u-label.u-label-2(for='email-716f') Facebook
                         input#email-716f.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(type='email' placeholder='Nhập vào đường dẫn Facebook của bạn' name='FacebookURL' required='')
+                      if (vitri == 'TruyenThong')
+                        .u-form-group.u-form-select.u-label-none.u-form-group-3
+                          label.u-custom-font.u-font-roboto.u-label.u-label-2(for='email-716f') Vị trí ứng tuyển
+                          select#email-716f.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(name='select')
+                            option(value='Content') Content - Viết bài
+                            option(value='Design') Design - Thiết kế 
+
               .u-container-style.u-layout-cell.u-shape-rectangle.u-size-38.u-layout-cell-2
                 .u-container-layout.u-container-layout-2
                   .u-form.u-form-2
